# GCXL2024

./: .gitignore  README.md
dataset/: README.md
docs/: README.md
host/: CMakeLists.txt  config.yaml  main.cpp  script.sh  startup_terminal.desktop  startup_terminal_script.sh
host/inc/: Camera.h  Command.h  Detector.h  QRcode.h  usart.hpp
host/src/: Camera.cpp  Command.cpp  Detector.cpp  QRcode.cpp  show_QR_info.cpp  usart.cpp
src/ESP32/: README.md  sdkconfig  sdkconfig.old
src/ESP32/main/: CMakeLists.txt  excute.c  udp_server.c  udp_server.h  usart.c  usart.h
src/chasis/: chassis.ioc
src/chasis/APP/: CAN_receive.c  CAN_receive.h  mytask.c  mytask.h  usartx.c  usartx.h
src/chasis/BSP/boards/: bsp_led.h
src/chasis/Core/Inc/: stm32f4xx_it.h
src/chasis/Core/Src/: freertos.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
src/chasis/MDK-ARM/: chassis.uvguix.LuckyE  chassis.uvoptx  chassis.uvprojx
src/chasis/MDK-ARM/RTE/_Chassis/: RTE_Components.h
src/chasis/MDK-ARM/RTE/_dipan/: RTE_Components.h
src/chasis/MDK-ARM/chasis/: chasis.hex
src/chasis/component/controll/: PID.c  PID.h
src/train_model/: README.md  image_demo.py  test.py
src/train_model/yolov5/: det_p5_tta.py  train_config.py  yolov5_s-v61_syncbn_8xb16-300e_coco.py
tools/Threshold adjust tool/: CMakeLists.txt  main.cpp
tools/check camera number/: CMakeLists.txt  main.cpp
tools/prepare_dataset/: CMakeLists.txt  README.md  prepare_dataset.cpp
